build/meson-logs/meson-log.txt
Build started at 2024-04-09T12:53:22.779912
Main binary: /usr/local/opt/python@3.12/bin/python3.12
Build Options: --cross-file=/Volumes/Data/VScode/Onethinx/BLE_DEMO/cross_gcc.build
Python system: Darwin
The Meson build system
Version: 1.3.1
Source dir: /Volumes/Data/VScode/Onethinx/BLE_DEMO
Build dir: /Volumes/Data/VScode/Onethinx/BLE_DEMO/build
Build type: cross build
Project name: meson_test
Project version: 0.1
C compiler for the host machine: arm-none-eabi-gcc (gcc 10.3.1 "arm-none-eabi-gcc (GNU Arm Embedded Toolchain 10.3-2021.10) 10.3.1 20210824 (release)")
C linker for the host machine: arm-none-eabi-gcc ld.bfd 10.3-2021
-----------
Detecting linker via: `arm-none-eabi-ar --version` -> 0
stdout:
GNU ar (GNU Arm Embedded Toolchain 10.3-2021.10) 2.36.1.20210621
Copyright (C) 2021 Free Software Foundation, Inc.
This program is free software; you may redistribute it under the terms of
the GNU General Public License version 3 or (at your option) any later version.
This program has absolutely no warranty.
-----------
C compiler for the build machine: cc (clang 15.0.0 "Apple clang version 15.0.0 (clang-1500.1.0.2.5)")
C linker for the build machine: cc ld64 1022.1
-----------
Detecting linker via: `llvm-ar --version` -> [Errno 2] No such file or directory: 'llvm-ar'
-----------
Detecting linker via: `ar --version` -> 1
stderr:
usage:  ar -d [-TLsv] archive file ...
	ar -m [-TLsv] archive file ...
	ar -m [-abiTLsv] position archive file ...
	ar -p [-TLsv] archive [file ...]
	ar -q [-cTLsv] archive file ...
	ar -r [-cuTLsv] archive file ...
	ar -r [-abciuTLsv] position archive file ...
	ar -t [-TLsv] archive [file ...]
	ar -x [-ouTLsv] archive [file ...]
-----------
Build machine cpu family: x86_64
Build machine cpu: x86_64
Host machine cpu family: arm
Host machine cpu: cortex-m4
Target machine cpu family: arm
Target machine cpu: cortex-m4
Program arm-none-eabi-objcopy found: YES (/Volumes/Data/VScode/GIT/VSCode_OnethinxPack_macOS/gcc-arm-none-eabi-10.3-2021.10/bin/arm-none-eabi-objcopy)
Program arm-none-eabi-objdump found: YES (/Volumes/Data/VScode/GIT/VSCode_OnethinxPack_macOS/gcc-arm-none-eabi-10.3-2021.10/bin/arm-none-eabi-objdump)
Program arm-none-eabi-size found: YES (/Volumes/Data/VScode/GIT/VSCode_OnethinxPack_macOS/gcc-arm-none-eabi-10.3-2021.10/bin/arm-none-eabi-size)
Program arm-none-eabi-gdb found: YES (/Volumes/Data/VScode/GIT/VSCode_OnethinxPack_macOS/gcc-arm-none-eabi-10.3-2021.10/bin/arm-none-eabi-gdb)
Program /Volumes/Data/VScode/GIT/VSCode_OnethinxPack_macOS/tools_3.0/cymcuelftool-1.0/bin/cymcuelftool found: YES (/Volumes/Data/VScode/GIT/VSCode_OnethinxPack_macOS/tools_3.0/cymcuelftool-1.0/bin/cymcuelftool)
Program arm-none-eabi-readelf found: YES (/Volumes/Data/VScode/GIT/VSCode_OnethinxPack_macOS/gcc-arm-none-eabi-10.3-2021.10/bin/arm-none-eabi-readelf)
Program /Volumes/Data/VScode/GIT/VSCode_OnethinxPack_macOS/config/scripts/memcalc found: YES (/Volumes/Data/VScode/GIT/VSCode_OnethinxPack_macOS/config/scripts/memcalc)
Using cached compile:
Cached command line:  arm-none-eabi-gcc /Volumes/Data/VScode/Onethinx/BLE_DEMO/build/meson-private/tmpp342domr/testfile.c -o /Volumes/Data/VScode/Onethinx/BLE_DEMO/build/meson-private/tmpp342domr/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 

Code:
 
        #include <stddef.h>
        int main(void) {
            void * something;
            return 0;
        }
Cached compiler stdout:
 
Cached compiler stderr:
 
Using cached compile:
Cached command line:  arm-none-eabi-gcc /Volumes/Data/VScode/Onethinx/BLE_DEMO/build/meson-private/tmp2512ughx/testfile.c -o /Volumes/Data/VScode/Onethinx/BLE_DEMO/build/meson-private/tmp2512ughx/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 

Code:
 
        #include <stddef.h>
        int main(void) { static int a[1-2*!(sizeof(void *) >= 0)]; a[0]=0; return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 
Using cached compile:
Cached command line:  arm-none-eabi-gcc /Volumes/Data/VScode/Onethinx/BLE_DEMO/build/meson-private/tmp7527nue_/testfile.c -o /Volumes/Data/VScode/Onethinx/BLE_DEMO/build/meson-private/tmp7527nue_/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 

Code:
 
        #include <stddef.h>
        int main(void) { static int a[1-2*!(sizeof(void *) > 0)]; a[0]=0; return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 
Using cached compile:
Cached command line:  arm-none-eabi-gcc /Volumes/Data/VScode/Onethinx/BLE_DEMO/build/meson-private/tmpthgz0bd1/testfile.c -o /Volumes/Data/VScode/Onethinx/BLE_DEMO/build/meson-private/tmpthgz0bd1/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 

Code:
 
        #include <stddef.h>
        int main(void) { static int a[1-2*!(sizeof(void *) > 1)]; a[0]=0; return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 
Using cached compile:
Cached command line:  arm-none-eabi-gcc /Volumes/Data/VScode/Onethinx/BLE_DEMO/build/meson-private/tmpvxzf33nn/testfile.c -o /Volumes/Data/VScode/Onethinx/BLE_DEMO/build/meson-private/tmpvxzf33nn/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 

Code:
 
        #include <stddef.h>
        int main(void) { static int a[1-2*!(sizeof(void *) > 3)]; a[0]=0; return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 
Using cached compile:
Cached command line:  arm-none-eabi-gcc /Volumes/Data/VScode/Onethinx/BLE_DEMO/build/meson-private/tmpbd644qd8/testfile.c -o /Volumes/Data/VScode/Onethinx/BLE_DEMO/build/meson-private/tmpbd644qd8/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 

Code:
 
        #include <stddef.h>
        int main(void) { static int a[1-2*!(sizeof(void *) > 7)]; a[0]=0; return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 /Volumes/Data/VScode/Onethinx/BLE_DEMO/build/meson-private/tmpbd644qd8/testfile.c: In function 'main':
/Volumes/Data/VScode/Onethinx/BLE_DEMO/build/meson-private/tmpbd644qd8/testfile.c:3:37: error: size of array 'a' is negative
    3 |         int main(void) { static int a[1-2*!(sizeof(void *) > 7)]; a[0]=0; return 0; }
      |                                     ^

Using cached compile:
Cached command line:  arm-none-eabi-gcc /Volumes/Data/VScode/Onethinx/BLE_DEMO/build/meson-private/tmpkigv8n5_/testfile.c -o /Volumes/Data/VScode/Onethinx/BLE_DEMO/build/meson-private/tmpkigv8n5_/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 

Code:
 
        #include <stddef.h>
        int main(void) { static int a[1-2*!(sizeof(void *) <= 5)]; a[0]=0; return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 
Using cached compile:
Cached command line:  arm-none-eabi-gcc /Volumes/Data/VScode/Onethinx/BLE_DEMO/build/meson-private/tmpz93mo2k6/testfile.c -o /Volumes/Data/VScode/Onethinx/BLE_DEMO/build/meson-private/tmpz93mo2k6/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 

Code:
 
        #include <stddef.h>
        int main(void) { static int a[1-2*!(sizeof(void *) <= 4)]; a[0]=0; return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 
Running compile:
Working directory:  /Volumes/Data/VScode/Onethinx/BLE_DEMO/build/meson-private/tmpxrmb03re
Code:
 
-----------
Command line: `arm-none-eabi-gcc /Volumes/Data/VScode/Onethinx/BLE_DEMO/build/meson-private/tmpxrmb03re/testfile.c -o /Volumes/Data/VScode/Onethinx/BLE_DEMO/build/meson-private/tmpxrmb03re/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 --print-search-dirs` -> 0
stdout:
install: /Volumes/Data/VScode/GIT/VSCode_OnethinxPack_macOS/gcc-arm-none-eabi-10.3-2021.10/bin/../lib/gcc/arm-none-eabi/10.3.1/
programs: =/Volumes/Data/VScode/GIT/VSCode_OnethinxPack_macOS/gcc-arm-none-eabi-10.3-2021.10/bin/../lib/gcc/arm-none-eabi/10.3.1/:/Volumes/Data/VScode/GIT/VSCode_OnethinxPack_macOS/gcc-arm-none-eabi-10.3-2021.10/bin/../lib/gcc/:/Volumes/Data/VScode/GIT/VSCode_OnethinxPack_macOS/gcc-arm-none-eabi-10.3-2021.10/bin/../lib/gcc/arm-none-eabi/10.3.1/../../../../arm-none-eabi/bin/arm-none-eabi/10.3.1/:/Volumes/Data/VScode/GIT/VSCode_OnethinxPack_macOS/gcc-arm-none-eabi-10.3-2021.10/bin/../lib/gcc/arm-none-eabi/10.3.1/../../../../arm-none-eabi/bin/
libraries: =/Volumes/Data/VScode/GIT/VSCode_OnethinxPack_macOS/gcc-arm-none-eabi-10.3-2021.10/bin/../lib/gcc/arm-none-eabi/10.3.1/:/Volumes/Data/VScode/GIT/VSCode_OnethinxPack_macOS/gcc-arm-none-eabi-10.3-2021.10/bin/../lib/gcc/:/Volumes/Data/VScode/GIT/VSCode_OnethinxPack_macOS/gcc-arm-none-eabi-10.3-2021.10/bin/../lib/gcc/arm-none-eabi/10.3.1/../../../../arm-none-eabi/lib/arm-none-eabi/10.3.1/:/Volumes/Data/VScode/GIT/VSCode_OnethinxPack_macOS/gcc-arm-none-eabi-10.3-2021.10/bin/../lib/gcc/arm-none-eabi/10.3.1/../../../../arm-none-eabi/lib/:/Volumes/Data/VScode/GIT/VSCode_OnethinxPack_macOS/gcc-arm-none-eabi-10.3-2021.10/bin/../arm-none-eabi/lib/arm-none-eabi/10.3.1/:/Volumes/Data/VScode/GIT/VSCode_OnethinxPack_macOS/gcc-arm-none-eabi-10.3-2021.10/bin/../arm-none-eabi/lib/:/Volumes/Data/VScode/GIT/VSCode_OnethinxPack_macOS/gcc-arm-none-eabi-10.3-2021.10/bin/../arm-none-eabi/usr/lib/arm-none-eabi/10.3.1/:/Volumes/Data/VScode/GIT/VSCode_OnethinxPack_macOS/gcc-arm-none-eabi-10.3-2021.10/bin/../arm-none-eabi/usr/lib/
-----------
Library cy_ble_stack_gcc_host_soft_cm4 found: YES
Library cy_ble_stack_gcc_controller_soft_cm4 found: YES
Library cy_ble_stack_gcc_manager_soft_cm4 found: YES
Build targets in project: 3

meson_test 0.1

  User defined options
    Cross files: /Volumes/Data/VScode/Onethinx/BLE_DEMO/cross_gcc.build

Found ninja-1.11.1 at /usr/local/bin/ninja
